2006-02-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/ldbl-128/s_llrintl.c (__llrintl): Fix a typo.
	* sysdeps/s390/fpu/libm-test-ulps: Remove llrint ulps.

2006-02-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Add
	some more entries.

2006-01-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/fpu/Implies: New file.
	* sysdeps/alpha/fpu/s_ceil.c: Include math_ldbl_opt.h, add
	compat_symbol if LONG_DOUBLE_COMPAT.
	* sysdeps/alpha/fpu/s_copysign.c: Likewise.
	* sysdeps/alpha/fpu/s_fabs.c: Likewise.
	* sysdeps/alpha/fpu/s_floor.c: Likewise.
	* sysdeps/alpha/fpu/s_rint.c: Likewise.
	* sysdeps/alpha/soft-fp/e_sqrtl.c: New file.
	* sysdeps/alpha/Implies: Add ieee754/ldbl-128.

	* sysdeps/unix/sysv/linux/alpha/bits/wordsize.h: New file.
	* sysdeps/unix/sysv/linux/alpha/Implies: Add ieee754/ldbl-64-128,
	ieee754/ldbl-opt.
	* sysdeps/alpha/bits/mathdef.h (__NO_LONG_DOUBLE_MATH): Remove.
	* sysdeps/unix/sysv/linux/alpha/nldbl-abi.h: New file.
	* sysdeps/unix/sysv/linux/alpha/Makefile
	[$(subdir) = math] (libm-routines): Add multc3, divtc3.

	* math/divtc3.c: New file.
	* math/multc3.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc32/Makefile
	[$(subdir) = math] (libm-routines): Add multc3, divtc3.

	* sysdeps/unix/sysv/linux/sparc/sparc32/fpu/Implies: New file.
	* sysdeps/sparc/sparc32/fpu/s_fabsl.c: Include math.h and
	math_ldbl_opt.h.
	(fabsl): Use long_double_symbol instead of weak_alias.
	* sysdeps/sparc/sparc32/fpu/s_fabs.c: Include math.h and
	math_ldbl_opt.h.
	[LONG_DOUBLE_COMPAT] (fabsl): Add compat_symbol.

2006-01-31  Martin Schwidefsky	<schwidefsky@de.ibm.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/Implies: New file.
	* sysdeps/unix/sysv/linux/s390/fpu/Implies: New file.
	* sysdeps/unix/sysv/linux/s390/nldbl-abi.h: New file.
	* sysdeps/s390/fpu/bits/mathinline.h (signbitl, sqrtl): New inlines.
	* sysdeps/s390/bits/mathdef.h: New file.